Fixing bug with spotify iframe clipping out of modal

--- a/styles/main.css
+++ b/styles/main.css
@@ -313,6 +313,8 @@ canvas {
     color: white; }
   .modal-header li, .modal-body li, .modal-footer li {
     font-size: 16px; }
+  .modal-header iframe, .modal-body iframe, .modal-footer iframe {
+    width: 100%; }
   .modal-header img, .modal-body img, .modal-footer img {
     max-height: 650px; }
 
