--- a/styles/page/_modal.scss
+++ b/styles/page/_modal.scss
@@ -17,6 +17,10 @@
     font-size: $body-font-size;
   }
 
+  iframe {
+    width: 100%;
+  }
+
   img {
     max-height: 650px;
   }
